test_suite/alan-2022-examples/failing/008070_mutation.alan
source X function() begin relax end begin relax end
